--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@next/font": "^14.2.15",
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
-    "next": "15.4.1",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.4.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
