--- a/functions/package.json
+++ b/functions/package.json
@@ -10,17 +10,19 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "20"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "busboy": "^1.6.0",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
     "node-cron": "^3.0.2"
   },
   "devDependencies": {
-    "typescript": "^4.9.0",
-    "@types/node": "^18.11.9"
+    "@types/busboy": "^1.5.4",
+    "@types/node": "^18.11.9",
+    "typescript": "^4.9.0"
   },
   "private": true
-} 
+}
